<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:weightSum="1"
        android:background="?attr/lighToolbarBackgroundColor"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2">

            <ImageView
                android:id="@+id/all_contacts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/button_background_drawable"
                android:contentDescription="@string/content_description_all_contacts"
                android:padding="15dp"
                android:visibility="gone"
                android:src="@drawable/contacts_all" />

            <View
                android:id="@+id/all_contacts_select"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_alignParentBottom="true"
                android:background="?attr/accentColor" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_weight="0.2">

            <ImageView
                android:id="@+id/linphone_contacts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/button_background_drawable"
                android:contentDescription="@string/content_description_linphone_contacts"
                android:gravity="center"
                android:padding="15dp"
                android:visibility="gone"
                android:src="@drawable/contacts_sip" />

            <View
                android:id="@+id/linphone_contacts_select"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_alignParentBottom="true"
                android:background="?attr/accentColor"
                android:visibility="visible" />
        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ic_back"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="?attr/button_background_drawable"
                android:contentDescription="@string/content_description_new_contact"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Contacts"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black_color"
                android:textSize="@dimen/_14ssp"/>
        <ImageView
            android:id="@+id/newContact"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:background="?attr/button_background_drawable"
            android:contentDescription="@string/content_description_new_contact"
            android:tint="@color/color1"
            android:padding="@dimen/_10sdp"
            android:visibility="invisible"
            android:src="@drawable/ic_plus" />
        </RelativeLayout>
        <ImageView
            android:id="@+id/edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:visibility="visible"
            android:background="?attr/button_background_drawable"
            android:contentDescription="@string/content_description_edit_list"
            android:padding="15dp"
            android:src="@drawable/delete" />

    </LinearLayout>

    <include layout="@layout/edit_list" android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:background="?attr/lighToolbarBackgroundColor"
        android:padding="10dp">

        <SearchView
            android:id="@+id/searchField"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:iconifiedByDefault="false"
            android:inputType="textPersonName"
            android:paddingRight="5dp"
            app:queryBackground="@android:color/transparent"
            android:queryBackground="@android:color/transparent"
            android:background="@drawable/bg_searchview"
            android:queryHint="@string/chat_room_creation_filter_hint"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/contactsListRefresher"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/contactsList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="?attr/dividerColor"
                android:dividerHeight="1dp" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <ProgressBar
            android:id="@+id/contactsFetchInProgress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/noSipContact"
            style="@style/empty_list_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/no_sip_contact"
            android:visibility="gone" />

        <TextView
            android:id="@+id/noContact"
            style="@style/empty_list_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/no_contact"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>
